[package]
name = "naive_hashmap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
afl = "*"
url = "*"

[dev-dependencies]
quickcheck = "1.0.3"
criterion = "0.4.0"

# [[bench]]
# name = "naive"
# harness = false

[[bin]]
name = "naive_interpreter"
doc = false

# [[bin]]
# name = "naive"
# doc = false

# [[bin]]
# name = "standard"
# doc = false

# [[bench]]
# name = "specialized"
# harness = false

# [[bin]]
# name = "specialized_interpreter"
# doc = false

# [[bin]]
# name = "specialized"
# doc = false
